virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webhook-virtualservice
spec:
  hosts:
  #- github-eventsource-svc.argo-events.svc.cluster.local
  - "*"
  gateways:
  - webhook-gateway
  http:
  - match:
    - uri:
        prefix: /push
    route:
    - destination:
        port:
          number: 12000 # can be omitted if it's the only port for reviews
        host: github-eventsource-svc.argo-events.svc.cluster.local
